# Lain

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  lain2bin.py
config/: LainConfig.hpp.in
docs/: tokens.txt
samples/: echo.lain  fizzbuzz.lain  hello.lain  the_answer.lain
samples/tests/: basic_control.lain  basic_exprs.lain  classes.lain  external_declaration1.lain  external_declaration2.lain  functions.lain  two_var_exprs.lain  var_decl.lain
src/: compiler.cpp
src/ast/: ast.cpp  class_decl.cpp  compound_stmt.cpp  function_call_expr.cpp  function_decl.cpp  module.cpp  scope_creator.cpp  type.cpp  type_decl.cpp  var_decl_stmt.cpp  var_instance_expr.cpp
src/ast/include/: access_modifier.hpp  ast.hpp  ast_node.hpp  ast_shared.hpp  binary_operation_expr.hpp  break_stmt.hpp  class_decl.hpp  compound_stmt.hpp  continue_stmt.hpp  decl.hpp  else_stmt.hpp  expr.hpp  for_stmt.hpp  function_call_expr.hpp  function_decl.hpp  grouped_expr.hpp  if_stmt.hpp  literal_expr.hpp  literal_kind.hpp  member_var_decl.hpp  method_decl.hpp  module.hpp  null_stmt.hpp  operation_type.hpp  primitive_type.hpp  qual_type.hpp  return_stmt.hpp  scope_creator.hpp  scope_tree.hpp  stmt.hpp  switch_stmt.hpp  type.hpp  type_decl.hpp  typedef_decl.hpp  unary_operation_expr.hpp  var_decl.hpp  var_decl_stmt.hpp  var_instance_expr.hpp  while_stmt.hpp
src/ast/tests/: types.cpp
src/emitter/: emitter.cpp  emitter.hpp  llvm_includes.hpp  main.cpp
src/lexer/: lexer.cpp  lexer_dump.cpp
src/lexer/include/: lexer.hpp  lexer_shared.hpp  symbol.hpp  symbol_data.hpp  token.hpp
src/libs/: builtin.c  builtin.cpp  builtin.lain  builtin.ll
src/parser/: main.cpp  parser.cpp  parser.hpp  parser_error.hpp
